k8s/deploymet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: message-board
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: kailashbadu/flask-message-app:v1.0.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "120Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 3

         
---


apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: message-board
spec:
  selector:
    app: flask
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
