k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-board-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   ingressClassName: nginx
   rules:
     - host: message-board.local
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
              service:
                name: flask-service
                port:
                   number: 80
